Add Body Animations - Breakfast

--- a/src/Body/Body.css
+++ b/src/Body/Body.css
@@ -1,16 +1,14 @@
-.body__container {
+/* .body__container {
     width: 650px;
     height: 1100px;
     border: 3px solid black;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    overflow: hidden;
+    position: relative;
 }
 
 .body__title {
-    width: 650px;
+    width: 550px;
     height: auto;
+    position: absolute;
     padding-left: 82px;
     font-family: 'Hind Siliguri', sans-serif;
     font-size: 50px;
@@ -23,9 +21,7 @@
     width: 160px;
     height: 150px;
     margin: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
     background-color: white;
     border: 3px solid black;    
 }
@@ -33,4 +29,91 @@
 .body__food {
     display: flex;
     flex-direction: row;
+}
+
+.body__food__hidden {
+    display: none;
+} */
+
+.body__container {
+    width: 640px;
+    height: 1100px;
+    border: 3px solid black;
+    display: grid;
+    grid-template-columns: 50px 160px 30px 160px 30px 160px 50px;
+    grid-template-rows: 50px 80px 45px 150px 25px 80px 25px 150px 25px 80px 150px 50px;
+}
+
+.body__title {
+    width: auto;
+    margin: 0;
+    padding-left: 50px;
+    font-family: 'Hind Siliguri', sans-serif;
+    font-size: 50px;
+    color: white;
+    background-color: turquoise;
+    opacity: 0.8;
+    grid-column: 1 / 8;
+    grid-row: 2 / 2;
+    animation-name: title;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes title {
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0.5;
+    }
+    100% {
+        transform: translateZ(20px);
+    }
+}
+
+.body__hidden {
+    display: none;
+}
+
+.bf__1 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 4;
+}
+
+.bf__2 {
+    grid-column: 4 / 5;
+    grid-row: 4 / 4;
+}
+
+.bf__3 {
+    grid-column: 6 / 7;
+    grid-row: 4 / 4;
+}
+
+.body__breakfast{
+    background-color: white;
+    border: 3px solid #fe5d6f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-name: breakfast;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes breakfast {
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0.5;
+    }
+    100% {
+        transform: translateY(-20px);
+    }
 }
