--- a/src/MainTitle/MainTitle.css
+++ b/src/MainTitle/MainTitle.css
@@ -1,37 +1,39 @@
 .main__container {
-    width: 650px;
-    height: 400px;
+    width: 640px;
+    height: 500px;
     background-color: white;    
     border: 3px solid black;
+    border-radius: 5px;
     display: flex;
     justify-content: center;
+    position: relative;
     z-index: 4;
     overflow: hidden;
-    margin: 20px 0;
+    margin: 50px 0;
 }
 
 .main__title {
-    width: 460px;
-    height: 140px;
     padding: 50px;
-    font-family: 'Hind Siliguri', sans-serif;
-    font-size: 80px;
+    margin-top: 155px;
+    font-family: 'Cabin Sketch', cursive;
+    font-size: 78px;
     font-weight: 900;
     background-color: #fe5d6f;
+    border-radius: 5px;
     opacity: 0.8;
     color: white;
     position: absolute;
     z-index: 2; 
 }
 
-.main__image {
-    animation-name: healthy;
+.main__image1 {
+    animation-name: healthy1;
     animation-duration: 10s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
 
-@keyframes healthy {
+@keyframes healthy1 {
     100% {
         z-index: 1;
         transform: translateX(-100%) translateZ(0);
